# task-soft-s

./: .gitignore  LICENSE  README.md  meta.yaml
conda-package/recipe/: build.bat  build_log.txt  meta.yaml
conda-package/recipe/Release/: hashes.txt
conda-package/recipe/task-soft-s.dir/Release/: task-soft-s.exe.recipe
conda-package/recipe/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
conda-package/recipe/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
conda-package/src/: CMakeLists.txt  HashManager.cpp  HashManager.h  main.cpp  main.h
